// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeTextComponent Snapshot should match snapshot with custom props 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 12,
        "paddingHorizontal": 10,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#84060a",
      },
      {
        "borderRadius": 5,
        "padding": 10,
      },
    ]
  }
>
  <Text
    style={
      {
        "color": "#1b60ff",
      }
    }
    variant="LABEL3"
  >
    Custom
  </Text>
</View>
`;

exports[`BadgeTextComponent Snapshot should match snapshot with default props 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 12,
        "paddingHorizontal": 10,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#F1F5F9",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      {
        "color": "#0F172A",
      }
    }
    variant="LABEL3"
  >
    Active
  </Text>
</View>
`;

exports[`BadgeTextComponent Snapshot should match snapshot with inactive props 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 12,
        "paddingHorizontal": 10,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#F1F5F9",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      {
        "color": "#0F172A",
      }
    }
    variant="LABEL3"
  >
    Inactive
  </Text>
</View>
`;
